# task

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  delay_report.postman_collection.json  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
core/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_remove_delayreport_agent.py
data/: app.json  auth.json
delay_report/: asgi.py  celery.py  redis.py  settings.py  urls.py  wsgi.py
